--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cruise Booking</title>
+    <title>Cruise Queen</title>
     <!-- Fonts -->
     <link rel="pre-connect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Roboto:wght@400;500;700&display=swap"
         rel="stylesheet">
     <!-- Stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <!-- bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 </head>
 
 <body>
@@ -57,21 +59,23 @@
             </div>
             <div class="input-group f-class">
                 <div>
-                    <label for="">First Class ($150)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <label for="">First Class ($<span id="first-price">150</span>)</label>
+                    <input id="first" class="inp-style inp-width" type="number" value="0" name="">
                 </div>
-                <div class="plus-minus-btn">
-                    <p>+ -</p>
+                <div>
+                    <button onclick="handleFirstInput(true)" class="btn btn-success">+</button>
+                    <button onclick="handleFirstInput(false)" class="btn btn-success">-</button>
                 </div>
             </div>
             
             <div class="input-group f-class">
                 <div>
-                    <label for="">Economy ($100)</label>
-                    <input class="inp-style inp-width" type="number" name="">
+                    <label for="">Economy ($<span id="economy-price">100</span>)</label>
+                    <input id="economy" class="inp-style inp-width" type="number" value="0" name="">
                 </div>
-                <div class="plus-minus-btn">
-                    <p> <span>+</span> <span>-</span> </p>
+                <div>
+                    <button onclick="handleEconomyInput(true)" class="btn btn-success">+</button>
+                    <button onclick="handleEconomyInput(false)" class="btn btn-success">-</button>
                 </div>
             </div>
             <div class="calculations">
@@ -80,7 +84,7 @@
                         <p>Subtotal</p>
                     </div>
                     <div class="right">
-                        <p>$500</p>
+                        <p>$<span id="sub-total">0</span></p>
                     </div>
                 </div>
 
@@ -89,7 +93,7 @@
                         <p>Charge 10% VAT</p>
                     </div>
                     <div class="right">
-                        <p>$50</p>
+                        <p>$<span id="vat">0</span></p>
                     </div>
                 </div>
                 <hr>
@@ -98,15 +102,118 @@
                         <h4>Total</h4>
                     </div>
                     <div class="right">
-                        <p>$550</p>
+                        <p>$<span id="grand-total">0</span></p>
                     </div>
                 </div>
             </div>
-            <button class="btn-style">Book Now</button>
+            <button onclick="confirmation()" class="btn-style">Book Now</button>
         </div>
     </main>
 
-    <!--Thank You-->
+    <script>
+        // //document.getElementById("plus").addEventListener("click", function() {
+        //   handleFirstInput(true);
+        // });
+        // document.getElementById("minus").addEventListener("click", function() {
+        //     handleFirstInput(false);
+        // });
+        // function handleCategoryInput(category, isIncrease) {
+        //     const categoryInput = document.getElementById(category);
+        //     const categoryCount = parseInt(categoryInput.value);
+        //     // const firstNewInput = firstCount + 1;
+        //     let categoryNewInput = categoryCount;
+        //     if (isIncrease == true) {
+        //         categoryNewInput = categoryCount + 1;
+        //     }
+        //     if (isIncrease == false && categoryCount > 0) {
+        //         categoryNewInput = categoryCount - 1;
+        //     }
+        //     categoryInput.value = categoryNewInput;
+        //     // const categoryTotal = categoryNewInput * 150;
+        //     let categoryTotal = 0;
+        //     if (category == first) {
+        //         categoryTotal = categoryNewInput * 150;                
+        //     }
+        //     if (category == economy) {
+        //         categoryTotal = categoryNewInput * 100;        
+        //     }
+        //     document.getElementById(category).innerText = categoryTotal;
+        // }
+
+        // *****handling first class*****
+        function handleFirstInput(isIncrease) {
+            const firstInput = document.getElementById("first");
+            const firstCount = parseInt(firstInput.value);
+            let firstNewInput = firstCount;
+            if (isIncrease == true) {
+                firstNewInput = firstCount + 1;
+            }
+            if (isIncrease == false && firstCount > 0) {
+                firstNewInput = firstCount - 1;
+            }
+            firstInput.value = firstNewInput;
+            firstTotal = firstNewInput * 150;
+            document.getElementById("first-price").innerText = firstTotal;
+            subtotal();
+        }
+
+        // *****handling economy class*****
+        function handleEconomyInput(isIncrease) {
+            const economyInput = document.getElementById("economy");
+            const economyCount = parseInt(economyInput.value);
+            let economyNewInput = economyCount;
+            if (isIncrease == true) {
+                economyNewInput = economyCount + 1;
+            }
+            if (isIncrease == false && economyCount > 0) {
+                economyNewInput = economyCount - 1;
+            }
+            economyInput.value = economyNewInput;
+            economyTotal = economyNewInput * 100;
+            document.getElementById("economy-price").innerText = economyTotal;
+            subtotal();
+        }
+
+        // *****handling subtotal, charge, total*****
+        function subtotal() {
+            const firstInput = document.getElementById("first");
+            const firstCount = parseInt(firstInput.value);
+
+            const economyInput = document.getElementById("economy");
+            const economyCount = parseInt(economyInput.value);
+
+            const totalFare = firstCount * 150 + economyCount * 100;
+            document.getElementById("sub-total").innerText = totalFare;
+
+            const charge = totalFare * 0.1;
+            document.getElementById("vat").innerText = charge;
+
+            const total = totalFare + charge;
+            document.getElementById("grand-total").innerText = total;
+        }
+
+        // *****confirmation message*****
+        function confirmation() {
+            confirm("Are you sure you want to confirm your booking?");         
+        }
+        
+        // document.getElementById("plus").addEventListener("click", function() {
+        //     const firstInput = document.getElementById("first");
+        //     const firstCount = parseInt(firstInput.value);
+        //     const firstNewInput = firstCount + 1;
+        //     firstInput.value = firstNewInput;
+        //     firstTotal = firstNewInput * 150;
+        //     document.getElementById("first-price").innerText = firstTotal;
+        // });
+        // document.getElementById("minus").addEventListener("click", function() {
+        //     const firstInput = document.getElementById("first");
+        //     const firstCount = parseInt(firstInput.value);
+        //     const firstNewInput = firstCount - 1;
+        //     firstInput.value = firstNewInput;
+        //     firstTotal = firstNewInput * 150;
+        //     document.getElementById("first-price").innerText = firstTotal;
+        // });
+    </script>
 </body>
 
 </html>
